--- a/src/main/resources/io/dragonsbane/neurocog/home/home.fxml
+++ b/src/main/resources/io/dragonsbane/neurocog/home/home.fxml
@@ -17,7 +17,7 @@
                <children>
                   <ImageView id="networkStatus" fitHeight="28.0" fitWidth="26.0" layoutX="652.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@circle-orange.jpeg" />
+                        <Image url="@images/circle-orange.jpeg" />
                      </image>
                   </ImageView>
                   <Label alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="9.0" prefHeight="28.0" prefWidth="698.0" text="nLIGHTn" textFill="#0056cb">
